完善区块链功能，与web功能整合

--- a/views/login.html
+++ b/views/login.html
@@ -62,7 +62,8 @@
                     <div class="detail detail-phone sanjiao"><span>0571-28132872</span></div>
                 </div>
                 <div class="float-item"><span class="iconfont font-wechat"></span>
-                    <div class="detail detail-we-chat sanjiao"></div>
+                    <div class="detail detail-we-chat sanjiao"><img
+                                src="./img/WeChatImg-8lg-GUI.jpg" alt=""><span>添加客服微信</span></div>
                 </div></div>
             <div class="sign-in-page">
                 <header></header>
@@ -88,7 +89,7 @@
                                     <div class="column-input input-component"><input type="text" name="checkCode" placeholder="请输入图形验证码" maxlength="4" draggable="false" autocomplete="on" style="height: 44px; width: 340px;"><span class="error-text"></span></div>
                                 </div>
                                 <div style="display: flex; align-items: center; justify-content: space-between; margin: 20px 0px;">
-                                    <span style="font-size: 14px;">验证码登录</span><a href="https://www.baoquan.com/sign-up?lang=zh"><span class="to-register">注册新账号</span></a></div>
+                                    <span style="font-size: 14px;">验证码登录</span><a href="/"><span class="to-register">注册新账号</span></a></div>
                             </div>
                             <button type="submit" class="login">登录</button>
                         </form>
