短信的集成，接入

--- a/views/home.html
+++ b/views/home.html
@@ -149,7 +149,7 @@
                                         <div class="user">
                                             <div class="user-content"><span class="phone">{{.Phone}}</span><i
                                                         class="iconfont font-down"></i></div>
-                                            <ul><a href="https://www.baoquan.com/setting?lang=zh">
+                                            <ul><a href="/list_record.html?cert_id={{.Phone}}">
                                                     <li>账户中心</li>
                                                 </a>
                                                 <p class="to-login-out">退出</p></ul>
