--- a/views/list_record.html
+++ b/views/list_record.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="区块链存证、知识产权保护、网络维权、取证">
     <meta name="description"
           content="保全网基于区块链技术，提供数据权益保护一站式解决方案。我们专注于服务知识产权、电商维权、金融存证等领域，提供在线签名、数据存证、在线取证、在线出具司法鉴定意见书的完整流程，为上百万用户提供数据存证保全业务。是全国首例区块链存证案例的独家技术提供方。">
-    <title>保全网-区块链存证_在线取证_网络维权服务平台</title>
+    <title>认证列表</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="author" content="">
@@ -169,11 +169,11 @@
                         <div class="container member-container"><p class="table-name"><!-- react-text: 229 -->存证确权列表
                                 <!-- /react-text --><span class="price-tip"><!-- react-text: 231 -->（当前剩余存证容量
                                     <!-- /react-text --><span class="count"
-                                                              style="color: rgb(254, 158, 0);">9.9999421</span>
+                                                              style="color: rgb(254, 158, 0);">VIP,无限内存</span>
                                     <!-- react-text: 233 -->G<!-- /react-text --><a
-                                            href="https://www.baoquan.com/capacity?productType=ATTESTATION&amp;lang=zh"><span
+                                            href="#"><span
                                                 class="to-buy"
-                                                style="margin-left: 20px; color: rgb(29, 141, 251); cursor: pointer;">立即购买</span></a>
+                                                style="margin-left: 20px; color: rgb(29, 141, 251); cursor: pointer;">封顶</span></a>
                                     <!-- react-text: 236 -->）<!-- /react-text --></span></p>
                             <div class="description">
                                 <div style="display: flex; align-items: center; margin-top: 0px;"><span>自行上传原创内容存证，由保全网为您进行区块链数据固定。保全网不对您上传内容的真实性作验证。</span>
